--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -102,6 +102,8 @@ staging: bins libs
 
 rootfs: default-copyall-rootfs
 
+clean: ;
+
 # Configuration checks
 confcheck-y += $(call confcheck-tool, $(MKR_CXX), MKR_CXX)
 confcheck-y += $(call confcheck-ifnot, \
