--- a/build-tools/rsyncd.conf
+++ b/build-tools/rsyncd.conf
@@ -1,12 +1,12 @@
 address = localhost
-pid file = .rsyncd.pid
-[nfsroot]
-path = @MKR_NFSROOT@
 auth users = root
-strict modes = false
 secrets file = .rsyncd.secrets
-use chroot = true
+pid file = .rsyncd.pid
+strict modes = false
 read only = false
 munge symlinks = false
+use chroot = true
 uid = 0
 gid = 0
+[nfsroot]
+path = nfsroot
