Fix linux rebuild rules

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -25,7 +25,7 @@ endif
 
 # Checking whether MKR_XENO changed
 .mkr.cleaned: .mkr.srcdir $(O)/include/config/xeno.h $(O)/include/config/karch.h
-	$(Q)rm -Rf * $(filter-out .mkr%,$(wildcard .[a-z]* ..[a-z]*)) && : > $@
+	$(Q)rm -Rf * $(filter-out .mkr.srcdir .mkr.log .mkr.filelist .mkr.dirlist,$(wildcard .[a-z]* ..[a-z]*)) && : > $@
 
 # Patching the kernel with Xenomai
 ifeq ($(MKR_XENO),y)
@@ -44,8 +44,10 @@ xeno-srcdir=$(call mksrcdir,$(MKR_XENO_SRCDIR))
 ifeq ($(MKR_XENO_MAINT),y)
 .PHONY: FORCE
 .mkr.prepared: FORCE
+config-deps-y += .mkr.prepared
+else
+mkr_config-deps-y += .mkr.prepared
 endif
-deps += .mkr.prepared
 
 else
 configargs := -C $(srcdir) O=$(CURDIR)
@@ -59,16 +61,16 @@ defconfig-$(call not,$(defconfig)) = \
 defconfig-$(defconfig) = \
 	$(MAKE) $(configargs) $(MKR_LINUX_CONFIG) && mv .config $@
 
-config-deps-y += $(O)/include/config/linux/config.h
-config-deps-$(call not,$(defconfig)) += $(O)/include/config/board.h
+mkr_config-deps-y += $(O)/include/config/linux/config.h
+mkr_config-deps-$(call not,$(defconfig)) += $(O)/include/config/board.h
 
-.mkr_config: $(config-deps-y)
+.mkr_config: $(mkr_config-deps-y)
 	$(Q)rm -f ../.linux_config
 	+$(defconfig-y)
 
 ../.linux_config: ;
 
-.config: .mkr_config $(wildcard ../.linux_config)
+.config: .mkr_config $(wildcard ../.linux_config) $(config-deps-y)
 	@if [ -e ../.linux_config ]; then \
 		echo Resetting Linux configuration to .linux_config; \
 		cp ../.linux_config .config; \
