--- a/ltp/Makefile
+++ b/ltp/Makefile
@@ -2,8 +2,8 @@
 # compilation
 LTP_PATH=$(shell echo $$PATH | sed 's/[^:]*distcc://g')
 
-sync-$(call not,$(MKR_LTP_MAINT)) := cp -a
-sync-$(MKR_LTP_MAINT) := rsync -a
+sync-$(call not,$(MKR_LTP_MAINT)) := cp --preserve=links,mode -R
+sync-$(MKR_LTP_MAINT) := rsync -rlpgoD
 
 create-stamp := $(staging)/ltp/.mkr.dir-created
 
@@ -20,20 +20,22 @@ do-sync: $(create-stamp)
 
 $(staging)/ltp/configure: do-sync ;
 
-mkt-configure-args-y += --enable-maintainer-mode
+configure-args-y += --enable-maintainer-mode
 else
 $(staging)/ltp/configure: $(create-stamp)
 	$(sync-y) $(srcdir)/* $(staging)/ltp
+	if [ -e $(staging)/ltp/config.status ]; then \
+		echo Something is very wrong !; \
+		exit 1; \
+	fi
 endif
-
-compile: ;
 
 # Configure
 $(staging)/ltp/config.status: $(staging)/ltp/configure
 	cd $(dir $@) && ./configure $(configure-args-y)
 
-# Build & install
-staging: $(staging)/ltp/config.status
+# Build
+compile: $(staging)/ltp/config.status
 	cd $(staging)/ltp && PATH=$(LTP_PATH) $(MAKE) \
 	CROSS_COMPILE="$(cross)" \
 	CC="$(CC) $(ARCH_CFLAGS)" CXX="$(CXX) $(ARCH_LDFLAGS)" \
@@ -45,6 +47,8 @@ staging: $(staging)/ltp/config.status
 		output \
 		results; \
 	do mkdir -p $(staging)/ltp/$$dir || exit 1; done
+
+staging: ;
 
 rootfs: default-copyall-rootfs
 
